Coordination GET by id and POST basic implementations
